tests/baselines/reference/parameterInitializersForwardReferencing1_es6.errors.txt
tests/cases/conformance/functions/parameterInitializersForwardReferencing1_es6.ts(21,18): error TS2372: Parameter 'a' cannot be referenced in its initializer.
tests/cases/conformance/functions/parameterInitializersForwardReferencing1_es6.ts(25,22): error TS2372: Parameter 'async' cannot be referenced in its initializer.


==== tests/cases/conformance/functions/parameterInitializersForwardReferencing1_es6.ts (2 errors) ====
    let foo: string = "";
    
    function f1 (bar = foo) { // unexpected compiler error; works at runtime
        var foo: number = 2;
        return bar; // returns 1
    }
    
    function f2 (bar = (baz = foo) => baz) { // unexpected compiler error; works at runtime
        var fooo: number = 2;
        return bar(); // returns 1
    }
    
    function f3 (bar = foo, foo = 2) { // correct compiler error, error at runtime
        return bar;
    }
    
    function f4 (foo, bar = foo) {
        return bar
    }
    
    function f5 (a = a) {
                     ~
!!! error TS2372: Parameter 'a' cannot be referenced in its initializer.
        return a
    }
    
    function f6 (async = async) {
                         ~~~~~
!!! error TS2372: Parameter 'async' cannot be referenced in its initializer.
        return async
    }